projects/compiler/test/typechecker/indexing/string_error_range_nullable.1.out
Error at %FILE_NAME%:3:5
Type mismatch
  |  str[a:2]
         ^
Expected: Int
but instead found: Int?
